samples/_failures_safe/1761648849_01d483_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ba38072.c: In function ‘main’:
./samples/SAFE/__tmp_1ba38072.c:161:20: error: missing terminating " character
  161 |             printf("Invalid edge format\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1ba38072.c:161:13: error: expected expression at end of input
  161 |             printf("Invalid edge format\n
      |             ^~~~~~
./samples/SAFE/__tmp_1ba38072.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ba38072.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ba38072.c:161:13: error: expected declaration or statement at end of input
